--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,4 +1,3 @@
-<p>details works!</p>
 
 <h2>Product Details</h2>
 
@@ -9,6 +8,7 @@
  <h4>{{ product.price | currency }}</h4>
 
  <p>{{ product.description }}</p>
-
+<ng-template [ngIf]="product.avilab==true">
 <button (click)="addToCart()">Buy</button>
+</ng-template>
 </div> 
