--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,40 +1,29 @@
 <h3>Cart</h3>
-<div class="cart-item" *ngFor="let item of items">
-<span>{{ item.img}}> </span>
- <span>{{ item.name }} </span>
- <span>{{ item.price | currency }}</span>
+<div class="cart-item" style="height:400px ;" *ngFor="let product of items">
+  
+<span>  {{product.img}} </span>
+ <span>  {{product.name}}   </span>
+<span>  {{product.price | currency }}  </span> 
 </div>
 
 
-<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
- <div>
-   <label for="name">
-     Name
+<div class="container">
+   <h1> <p class="orderinput"> Order Form</p> </h1>
+   <p>Pleas fill up the info for delivery </p><hr>
+</div>
+
+ <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+ <div style="margin-bottom: 10px; margin-left: 20px;">
+   <label for="name" style="margin-left: 20px;">
+    <span style="margin-right: 20px; " > Name </span>
    </label>
    <input id="name" type="text" formControlName="name">
  </div>
- <div>
-   <label for="address">
-     Address
+ <div style="margin-bottom: 10px; margin-left: 20px;">
+   <label for="address"style="margin-left: 10px;">
+    <span style="margin-right: 20px;"> Address</span>
    </label>
    <input id="address" type="text" formControlName="address">
  </div>
- <button class="button" type="submit">Purchase</button>
-</form>
-
-
-
-
-
-
-
-
-<!-- <div class="container">
-   <h1> <p class="orderinput"> Order Form</p> </h1>
-   <p>Pleas fill up the info for delivery </p><hr>
-   <p>Name</p>
-   <input type="text" class="inputn">
-   <p>Adress</p>
-   <input type="text" class="inputn"><br>
-   <button type="button" class="btn btn-primary">Pruchase</button>
-</div> -->
+ <button class="btn btn-primary btn-lg" type="submit" style="margin-left: 20px; margin-bottom: 30px;">Order</button>
+</form> 
